# trunk_frontend

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  Trunk.toml  _redirects  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  tailwind.config.js
netlify/functions/: contact.js
src/: app.rs  lib.rs  main.rs
src/pages/: about.rs  blog.rs  contact.rs  counter.rs  faq.rs  gallery.rs  game.rs  home.rs  login.rs  mod.rs  photos.rs  register.rs  users.rs
static/: _redirects
static/css/: tailwind.generated.css
static/scss/: about.scss  contact.scss  faq.scss  gallery.scss  home.scss  index.scss  photos.scss  tailwind.scss
