[package]
name = "trunk_new"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

web-sys = { version = "0.3", features = ["Window", "HtmlInputElement", "Crypto"] }
js-sys = "0.3"

gloo = "0.7"
gloo-net = "0.5"

serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4"

